# HIDS

./: CMakeLists.txt  Makefile  README.md  install_deps.sh  test_hids_alert.py
config/: hids.conf
hids_bot/: .env  .env.example  bot.py  hids_listener.py  requirements.txt
hids_bot/database/: db_manager.py
hids_bot/handlers/: alert_handler.py  auth_handler.py  system_handler.py
hids_bot/utils/: cmd_executor.py  hids_listener.py  ip_validator.py  system_commands.py
include/alert/: alert_system.hpp
include/modules/: behavior_analyzer.hpp  file_integrity.hpp  log_monitor.hpp
include/utils/: telegram_notifier.hpp  utils.hpp
src/: main.cpp
src/alert/: alert_system.cpp
src/modules/: behavior_analyzer.cpp  file_integrity.cpp  log_monitor.cpp
src/utils/: telegram_notifier.cpp  utils.cpp
